# Winedark

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: base.comp  base.frag  base.vert  base2.comp  svo_raycast.comp
docs/rendering/: structure.md
docs/simulation/: ideas.md
src/: main.cpp
src/rendering/: archtexture.cpp  archtexture.h  camera.cpp  camera.h  polygon.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h  voxel.h
src/util/: geometry.cpp  geometry.h  polygons.h
src/utility/: geometry.cpp  geometry.h  settings.h
src/world/: octree.cpp  octree.h  voxel.cpp  voxel.h
